--- a/force-app/main/default/lwc/navigateToProductCatalog/navigateToProductCatalog.html
+++ b/force-app/main/default/lwc/navigateToProductCatalog/navigateToProductCatalog.html
@@ -1,6 +1,6 @@
 <template>
     <div class="slds-card">
-        <div class="slds-box">
+        <div class="slds-box slds-align_absolute-center">
             <lightning-button
                 onclick={navigate}
                 label="View product catalog"
