--- a/force-app/main/default/lwc/productConfigurationTile/productConfigurationTile.html
+++ b/force-app/main/default/lwc/productConfigurationTile/productConfigurationTile.html
@@ -11,7 +11,7 @@
             <p><span style="font-weight: bold;">{allocatedCount}</span> are reserved for this opportunity. &nbsp;
             
                 <template if:true={showEdit}>
-                    <lightning-button variant="base" label="Click to reserve" onclick={handleEditAlloc}></lightning-button>
+                    <lightning-button variant="base" label="Make a reservation" onclick={handleEditAlloc}></lightning-button>
                 </template>
             </p>
         </template>
