Stock count, oppty in the title, brand option from picklist, fulll spec message

--- a/force-app/main/default/lwc/productCatalog/productCatalog.html
+++ b/force-app/main/default/lwc/productCatalog/productCatalog.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-layout multiple-rows="true">
         <lightning-layout-item size="12" padding="around-small">
-            <c-product-filter onsearch={handleSearch}></c-product-filter>
+            <c-product-filter oppty-id={opptyId} onsearch={handleSearch}></c-product-filter>
         </lightning-layout-item>
 
         <lightning-layout-item size="5" padding="horizontal-small">
