--- a/force-app/main/default/lwc/productFullSpec/productFullSpec.html
+++ b/force-app/main/default/lwc/productFullSpec/productFullSpec.html
@@ -105,7 +105,7 @@
             </lightning-layout>
         </template>
         <template if:false={productSpec}>
-            <p class="slds-align_absolute-center">Select a product to view specifications.</p>
+            <p class="slds-align_absolute-center">{message}</p>
         </template>
     </lightning-card>
 </template>
