--- a/force-app/main/default/lwc/productFilter/productFilter.html
+++ b/force-app/main/default/lwc/productFilter/productFilter.html
@@ -1,13 +1,13 @@
 <template>
     <div class="container">
-        <lightning-card title="Filter Laptops">
+        <lightning-card title={title}>
             <div class="content slds-align_absolute-center slds-p-top_none slds-p-bottom_small">
 
                 <lightning-combobox 
                     name="brand" 
                     value={brand} 
                     placeholder="Select Brand" 
-                    options={brands}
+                    options={brandOptions}
                     onchange={handleChange}></lightning-combobox>
             </div>
         </lightning-card>
